# funcScript

./: .replit  LICENSE  README.md  dune-project  funcScript.opam  replit.nix
lib/: dune  fSeval.ml  fSeval.mli  fSlexer.mll  fSobjs.ml  fSobjs.mli  fSparser.mly  fSstdlib.ml  fSsyntax.ml  fSsyntax.mli  fStypes.ml  fStypes.mli  fStyping.ml  fStyping.mli  funcScript.ml  funcScript.mli
test/: dune  parser_tests.ml  test_utils.ml  typing_tests.ml
